@@ -4,6 +4,9 @@ Revision history for Graphics-ColorNames-HTML:
   [Other]
   - Marked this distribution as deprecated in module metadata.
 
+  [Documentation]
+  - Updated ABSTRACT and fixed minor typos in POD.
+
 v3.3.1    2018-10-21 17:08:19+01:00 Europe/London
   [Documentation]
   - Updated note about deprecation.
